--- a/webtgep/images/aa.html
+++ b/webtgep/images/aa.html
@@ -53,11 +53,12 @@
             <img class="with-dr-manav-ahuja" src="images/with_dr_manav_ahuja.png" alt="" width="529" height="80">
           </div>
         </div>
-        <div class="section-1">
+        <!-- <div class="section-1">
           <p class="text-5">अगर आपके Product में है दम, तो आपको</p>
           <img class="text-6" src="images/international_brand.png" alt="International Brand" width="638" height="53" title="International Brand">
           <p class="text-7">बना कर रहेंगे हम</p>
-        </div>
+        </div> -->
+        <img src="./images/vyp.jpeg" class="w-full h-[30%]" />
       </header>
       <div class="main-content-wrapper">
         <div class="l-unconstrained">
